Fixed html proofing errors

--- a/terminal.html
+++ b/terminal.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Personal blog of Adnan Shaikh">
     <meta name="author" content="Adnan Shiakh">
-    <link rel="shortcut icon" href="./terminal/site/ico/favicon.ico">
+    <link rel="shortcut icon" href="/favicon.ico">
     <title>Adnan Shaikh</title>
 
     <link rel="stylesheet" href="./terminal/bootstrap/css/bootstrap.min.css">
