Changed all name references to adyshake

--- a/terminal.html
+++ b/terminal.html
@@ -94,7 +94,7 @@
         window.location.href = 'mailto:adnan.shaikh1806@gmail.com?subject=Project';
         return;
         case 'twitter':
-        window.open('https://twitter.com/#!/adnanshaikhh');
+        window.open('https://twitter.com/#!/adyshake_');
         return;
         default:
         if (key.length) {
