November 2019 Update Added build instructions to README Added leetcode beeminder graph to homepage Updated now page Updated resume with logos Updated new resume pdf

--- a/index.html
+++ b/index.html
@@ -29,13 +29,17 @@ layout: base
                 <span class="fa fa-envelope fa-lg main-list-item-icon"></span>
             </li>
         </ul>
+        <div align="center">
+                <iframe src="https://www.beeminder.com/widget?slug=yeetcode&username=adnanshaikh" height="185px" width="230px" frameborder="0px" ></iframe><br>
+                <i>The leetcode grind</i>
+        </div>
     </header>
     <main>
-      <div class="content">
+        <div class="content">
 
         {% capture biosketch %}{% include biosketch.md %}{% endcapture %}
         {{ biosketch | markdownify }}
 
-      </div>
+        </div>
     </main>
 </div>
