--- a/404.html
+++ b/404.html
@@ -48,8 +48,7 @@ permalink: /404.html
         <a href="/blog/">0xBLOG</a>
         <br>
         <br>
-        <p>If this has occurred multiple times, please contact your
-            <a href="mailto:adnan.shaikh1806@gmail.com">System Administrator.</a></p>
+        <p>If this has occurred multiple times, please contact your system administrator.</a></p>
         Click any link to continue...
     </body>
 </html>
